aks/app.deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  name: football-app
  namespace: football-league
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      release: football-app
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 0
        maxSurge: 1
  template:
    metadata:
      labels:
        release: football-app
      name: football-app
    spec:
      hostname: football-app
      imagePullSecrets:
        - name: mwao
      containers:
        - name: prd-regt
          image: football.product/football-app:__COMMIT_ID__
          imagePullPolicy: Always
          ports:
            - containerPort: 9091
              name: prod-reg
          resources:
            requests:
              cpu: 500m
              memory: 2096Mi
            limits:
              cpu: 1000m
              memory: 4096Mi
---

apiVersion: v1
kind: Service
metadata:
  name: football-app
  labels:
    release: football-app
spec:
  type: ClusterIP
  selector:
    release: football-app
  ports:
    - port: 8082
      targetPort: 8081
---
