aks/app.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: football-app
  namespace: maestro-portal
  labels:
    website: football-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: football-app${DEPLOY_TYPE}.myapp
      http:
        paths:
        - path: /
          backend:
            serviceName: football-app
            servicePort: 8081
  tls:
  - hosts:
    - football-app${DEPLOY_TYPE}.myapp
    secretName: docker-desktop
---
